Fix scrollbar of carousel

--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,10 @@
 }
 
 @layer components {
+    .carousel::-webkit-scrollbar {
+        display: initial;
+    }
+
     .word-break {
         word-break: break-word;
     }
